<resources>
    <string name="app_name">Cozy</string>
    <string name="search_hint">Tìm kiếm ở đây</string>
    <string name="create_account_cozy">Tạo tài khoản</string>
    <string name="enter_your_name">Nhập tên của bạn</string>
    <string name="last_name">Họ</string>
    <string name="first_name">Tên</string>
    <string name="next">Tiếp theo</string>
    <string name="basic_info">Thông tin cơ bản</string>
    <string name="enter_your_birthday_and_gender">Nhập ngày sinh và giới tính của bạn</string>
    <string name="blank">""</string>
    <string name="please_enter_first_last_name">Vui lòng nhập họ và tên</string>
    <string name="please_enter_first_name">Hãy nhập tên</string>
    <string name="please_enter_last_name">Hãy nhập họ</string>
    <string name="error_invalid_name">Tên không được chứa kí tự đặc biệt</string>
    <string name="day">Ngày</string>
    <string name="month">Tháng</string>
    <string name="year">Năm</string>
    <string name="gender">Giới tính</string>
    <string name="please_enter_your_birthday">Vui lòng điền ngày sinh đầy đủ</string>
    <string name="invalid_birthday">Ngày sinh không hợp lệ</string>
    <string name="male">Nam</string>
    <string name="female">Nữ</string>
    <string name="please_enter_your_gender">Vui lòng nhập giới tính</string>
    <string name="enter_your_email">Nhập địa chỉ Email của bạn</string>
    <string name="email">Địa chỉ Email</string>
    <string name="please_enter_your_email">Vui lòng nhập địa chỉ email của bạn</string>
    <string name="invalid_email">Địa chỉ email không hợp lệ</string>
    <string name="duplicate_email">Địa chỉ email đã được sử dụng</string>
    <string name="please_create_strong_password">Tạo một mật khẩu mạnh</string>
    <string name="create_strong_password_detail">Tạo một mật khẩu mạnh có kết hợp của các chữ cái, số và ký hiệu</string>
    <string name="password">Mật khẩu</string>
    <string name="enter_your_password">Nhập mật khẩu của bạn</string>
    <string name="please_enter_your_password">Vui lòng nhập mật khẩu của bạn</string>
    <string name="error_password_less_six_character">Mật khẩu tối thiểu 6 kí tự</string>
    <string name="weak_password">Mật khẩu yếu</string>
    <string name="something_wrong">Đã có lỗi xảy ra</string>
    <string name="something_wrong_detail">Rất tiếc, đã xảy ra sự cố. Vui lòng thử lại</string>
    <string name="add_account">Thêm tài khoản</string>
    <string name="your_profile">Hồ sơ của bạn</string>
    <string name="setting">Cài đặt</string>
    <string name="help_and_feedback">Trợ giúp và phản hồi</string>
    <string name="sign_in">Đăng nhập</string>
    <string name="use_your_cozy_account">Sử dụng Tài khoản Cozy của bạn</string>
    <string name="account_not_found">Không tìm thấy tài khoản Cozy của bạn</string>
    <string name="welcome">Chào mừng</string>
    <string name="wrong_password">Mật khẩu không chính xác. Hãy thử lại</string>
    <string name="all_ready">Tất cả đã sẵn sàng!</string>
    <string name="sign_out">Đăng xuất</string>
    <string name="explore">Khám phá</string>
    <string name="inbox">Tin nhắn</string>
    <string name="review">Đánh giá</string>
    <string name="post_room">Đăng phòng</string>
    <string name="saved">Đã lưu</string>
    <string name="homestay">Homestay</string>
    <string name="rented_room">Phòng cho thuê</string>
    <string name="apartment">Chung cư</string>
    <string name="house">Nhà nguyên căn</string>
    <string name="center_location">Vị trí tìm kiếm</string>
    <string name="add_location">Thêm phòng</string>
    <string name="all">Tất cả</string>
    <string name="owner_not_included">Không chung chủ</string>
    <string name="private_wc">Vệ sinh riêng</string>
    <string name="parking">Chỗ để xe</string>
    <string name="security">An ninh</string>
    <string name="window">Cửa sổ</string>
    <string name="free_time">Tự do thời gian</string>
    <string name="wifi">Wifi</string>
    <string name="air_conditioner">Điều hòa</string>
    <string name="water_heater">Máy nước nóng</string>
    <string name="washer">Máy giặt</string>
    <string name="refrigerator">Tủ lạnh</string>
    <string name="kitchen">Nhà bếp</string>
    <string name="balcony">Ban công</string>
    <string name="bed">Giường</string>
    <string name="wardrobe">Tủ quần áo</string>
    <string name="pet">Nuôi thú cưng</string>
    <string name="address">Địa chỉ</string>
    <string name="room_info">Thông tin phòng</string>
    <string name="room_category">Loại phòng</string>
    <string name="area">Diện tích</string>
    <string name="number_of_rooms">Số lượng phòng</string>
    <string name="cost">Chi phí</string>
    <string name="rent_cost">Giá cho thuê</string>
    <string name="deposit">Tiền cọc</string>
    <string name="time_deposit">Thời gian cọc</string>
    <string name="electric_cost">Tiền điện</string>
    <string name="water_cost">Tiền nước</string>
    <string name="internet">Internet</string>
    <string name="features">Tiện ích</string>
    <string name="capacity">Sức chứa</string>
    <string name="please_select_category_room">Vui lòng chọn loại phòng</string>
    <string name="please_fill_this_field">Vui lòng điền đầy đủ</string>
    <string name="invalid_address">Địa chỉ không hợp lệ</string>
    <string name="please_select_gender">Vui lòng chọn giới tính</string>
    <string name="search_in_this_area">Tìm kiếm tại khu vực này</string>
    <string name="my_location">Vị trí của tôi</string>
    <string name="picture">Ảnh</string>
    <string name="this_area">Khu vực này</string>
    <string name="detail">Chi tiết</string>
    <string name="center_dot">·</string>
    <string name="direction">Đường đi</string>
    <string name="message">Trò chuyện</string>
    <string name="vnd">" VND"</string>
    <string name="call">Gọi</string>
    <string name="save">Lưu</string>
    <string name="area_m2">%d m2</string>
    <string name="available_rooms">%d phòng có sẵn</string>
    <string name="person_per_room">%d người/phòng</string>
    <string name="free">Miễn phí</string>
    <string name="allow_all_gender">Cho cả nam và nữ thuê</string>
    <string name="only_male">Chỉ cho nam thuê</string>
    <string name="only_female">Chỉ cho nữ thuê</string>
    <string name="format_price">%s VND</string>
    <string name="deposit_cost">Tiền cọc %s VND</string>
    <string name="format_deposit_time">Thời gian cọc %d tháng</string>
    <string name="free_deposit">Miễn phí tiền cọc</string>
    <string name="free_electric">Miễn phí tiền điện</string>
    <string name="free_water">Miễn phí tiền nước</string>
    <string name="free_internet">Miễn phí tiền internet</string>

    <string name="format_electric_cost">%s VND/kWh</string>
    <string name="format_water_cost">%s VND/m3</string>
    <string name="format_internet_cost">%s VND/tháng</string>
    <string name="owner">Chủ nhà</string>
    <string name="not_provide_phone_number">Chủ nhà không cung cấp số điện thoại</string>
    <string name="mister">Anh</string>
    <string name="misses">Chị</string>
    <string name="owner_full_name">Chủ nhà: %s %s</string>
    <string name="ranking_and_review">Xếp hạng và đánh giá</string>
    <string name="share_experience">Chia sẻ trải nghiệm của bạn để giúp đỡ người khác</string>
    <string name="your_review">Trải nghiệm của bạn</string>
    <string name="post">Đăng</string>
    <string name="thank_for_review">Cảm ơn bạn đã đánh giá!</string>
    <string name="please_sign_in">Vui lòng đăng nhập</string>
    <string name="room_available">Còn phòng</string>
    <string name="room_unavailable">Hết phòng</string>
    <string name="saved_room">Phòng đã lưu</string>
    <string name="Update_your_phone">Cập nhật số điện thoại của bạn</string>
    <string name="phone_number">Số điện thoại</string>
    <string name="update">Cập nhật</string>
    <string name="list_uploaded_room">Danh sách phòng trọ đã đăng</string>
    <string name="edit_info">Sửa thông tin</string>
    <string name="apply">Áp dụng</string>
</resources>