<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="listener"
            type="com.monta.cozy.ui.authentication.name.NameFragment" />

        <variable
            name="authenticationViewModel"
            type="com.monta.cozy.ui.authentication.AuthenticationViewModel" />

        <variable
            name="viewModel"
            type="com.monta.cozy.ui.authentication.name.NameViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_create_account"
            style="@style/TextViewHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/normal_margin"
            android:text="@string/create_account_cozy"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_enter_your_name"
            style="@style/TextViewBody"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/normal_margin"
            android:text="@string/enter_your_name"
            app:layout_constraintEnd_toEndOf="@id/tv_create_account"
            app:layout_constraintStart_toStartOf="@id/tv_create_account"
            app:layout_constraintTop_toBottomOf="@id/tv_create_account" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_last_name"
            style="@style/OutlineTextInputLayout"
            disableHelper="@{true}"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/large_margin"
            android:layout_marginTop="@dimen/large_margin"
            android:layout_marginEnd="@dimen/large_margin"
            android:hint="@string/last_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_enter_your_name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="@{!authenticationViewModel.isLoading()}"
                android:inputType="textPersonName"
                android:text="@={authenticationViewModel.lastName}" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_first_name"
            style="@style/OutlineTextInputLayout"
            disableHelper="@{true}"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/large_margin"
            android:layout_marginTop="@dimen/medium_margin"
            android:layout_marginEnd="@dimen/large_margin"
            android:hint="@string/first_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/til_last_name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_first_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="@{!authenticationViewModel.isLoading()}"
                android:inputType="textPersonName"
                android:text="@={authenticationViewModel.firstName}" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            style="@style/ErrorTextView"
            error="@{viewModel.error}"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/tiny_margin"
            app:layout_constraintEnd_toEndOf="@id/til_first_name"
            app:layout_constraintStart_toStartOf="@id/til_first_name"
            app:layout_constraintTop_toBottomOf="@id/til_first_name" />

        <Button
            android:id="@+id/btn_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/large_margin"
            android:layout_marginBottom="@dimen/normal_margin"
            android:enabled="@{!authenticationViewModel.isLoading()}"
            android:onClick="@{() -> listener.validateName()}"
            android:text="@string/next"
            android:textAllCaps="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>