<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="listener"
            type="com.monta.cozy.ui.authentication.password_sign_up.PasswordSignUpFragment" />

        <variable
            name="authenticationViewModel"
            type="com.monta.cozy.ui.authentication.AuthenticationViewModel" />

        <variable
            name="viewModel"
            type="com.monta.cozy.ui.authentication.password_sign_up.PasswordSignUpViewModel" />


    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_create_account"
            style="@style/TextViewHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/normal_margin"
            android:text="@string/please_create_strong_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_password_detail"
            style="@style/TextViewBody"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/extreme_margin_secondary"
            android:layout_marginTop="@dimen/normal_margin"
            android:layout_marginEnd="@dimen/extreme_margin_secondary"
            android:gravity="center"
            android:text="@string/create_strong_password_detail"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_create_account" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_password"
            style="@style/OutlineTextInputLayout"
            disableHelper="@{true}"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/large_margin"
            android:layout_marginTop="@dimen/medium_margin"
            android:layout_marginEnd="@dimen/large_margin"
            android:hint="@string/password"
            app:endIconMode="password_toggle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_password_detail">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_password"
                android:enabled="@{!authenticationViewModel.isLoading()}"
                android:text="@={authenticationViewModel.password}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionDone"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            error="@{viewModel.passwordError}"
            style="@style/ErrorTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/tiny_margin"
            app:layout_constraintEnd_toEndOf="@id/til_password"
            app:layout_constraintStart_toStartOf="@id/til_password"
            app:layout_constraintTop_toBottomOf="@id/til_password" />

        <Button
            android:id="@+id/btn_next"
            android:onClick="@{() -> listener.validatePassword()}"
            android:enabled="@{!authenticationViewModel.isLoading()}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/large_margin"
            android:layout_marginBottom="@dimen/normal_margin"
            android:text="@string/next"
            android:textAllCaps="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>