<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_rating_title"
            style="@style/TextViewBody.Bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/normal_margin"
            android:layout_marginTop="@dimen/normal_margin"
            android:text="@string/ranking_and_review"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_rating_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_margin"
            android:text="@string/share_experience"
            app:layout_constraintStart_toStartOf="@id/tv_rating_title"
            app:layout_constraintTop_toBottomOf="@id/tv_rating_title" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/iv_avatar"
            android:layout_width="@dimen/icon_width_large"
            android:layout_height="@dimen/icon_height_large"
            android:layout_marginStart="@dimen/normal_margin"
            android:layout_marginTop="@dimen/normal_margin"
            android:background="@color/green"
            android:padding="@dimen/tiny_margin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_rating_detail"
            app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.Circle" />

        <TextView
            android:id="@+id/tv_first_name_short"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_header"
            app:layout_constraintBottom_toBottomOf="@id/iv_avatar"
            app:layout_constraintEnd_toEndOf="@id/iv_avatar"
            app:layout_constraintStart_toStartOf="@id/iv_avatar"
            app:layout_constraintTop_toTopOf="@+id/iv_avatar" />

        <RatingBar
            android:id="@+id/rating_bar"
            style="@style/Widget.AppCompat.RatingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:progressTint="@color/yellow"
            app:layout_constraintBottom_toBottomOf="@id/iv_avatar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/iv_avatar"
            app:layout_constraintTop_toTopOf="@id/iv_avatar" />

        <ImageView
            android:id="@+id/iv_more"
            style="@style/MaterialIcon"
            android:src="@drawable/ic_more"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/rating_bar"
            app:layout_constraintBottom_toBottomOf="@id/rating_bar"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_content_review"
            style="@style/OutlineTextInputLayout"
            disableHelper="@{true}"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/normal_margin"
            android:layout_marginTop="@dimen/normal_margin"
            android:layout_marginEnd="@dimen/normal_margin"
            android:hint="@string/your_review"
            app:errorEnabled="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_avatar">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_content_review"
                android:layout_width="match_parent"
                android:imeOptions="actionDone"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_post_review"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_margin"
            android:text="@string/post"
            android:textAllCaps="false"
            app:layout_constraintEnd_toEndOf="@id/til_content_review"
            app:layout_constraintTop_toBottomOf="@id/til_content_review" />

        <View
            style="@style/Divider.Horizontal"
            android:layout_marginTop="@dimen/normal_margin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_post_review" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>